--- a/docker-compose.override.private.yml
+++ b/docker-compose.override.private.yml
@@ -30,7 +30,7 @@ services:
     ports:
       - 127.0.0.1:3000:3000
     environment:
-      DATABASE_URL: postgresql://postgres:${POSTGRES_PASSWORD}@supabase-db:5432/postgres
+      DATABASE_URL: postgresql://postgres:${POSTGRES_PASSWORD}@supabase-db:5432/langfuse
 
   clickhouse:
     ports:
