--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,10 @@ volumes:
   langfuse_clickhouse_logs:
   langfuse_minio_data:
 
+networks:
+  localai_default:
+    external: true
+
 x-n8n: &service-n8n
   image: n8nio/n8n:latest
   environment:
@@ -33,7 +37,6 @@ x-n8n: &service-n8n
 
 x-ollama: &service-ollama
   image: ollama/ollama:latest
-  container_name: ollama
   restart: unless-stopped
   expose:
     - 11434/tcp
@@ -47,7 +50,6 @@ x-ollama: &service-ollama
 
 x-init-ollama: &init-ollama
   image: ollama/ollama:latest
-  container_name: ollama-pull-llama
   volumes:
     - ollama_storage:/root/.ollama
   entrypoint: /bin/sh
@@ -59,7 +61,6 @@ services:
   flowise:
     image: flowiseai/flowise
     restart: unless-stopped
-    container_name: flowise
     expose:
       - 3001/tcp
     environment:
@@ -75,7 +76,6 @@ services:
   open-webui:
     image: ghcr.io/open-webui/open-webui:main
     restart: unless-stopped
-    container_name: open-webui
     expose:
       - 8080/tcp
     extra_hosts:
@@ -85,17 +85,17 @@ services:
 
   n8n-import:
     <<: *service-n8n
-    container_name: n8n-import
     entrypoint: /bin/sh
     command:
       - "-c"
       - "n8n import:credentials --separate --input=/backup/credentials && n8n import:workflow --separate --input=/backup/workflows"
     volumes:
       - ./n8n/backup:/backup
+    networks:
+      - localai_default
 
   n8n:
     <<: *service-n8n
-    container_name: n8n
     restart: unless-stopped
     expose:
       - 5678/tcp
@@ -103,13 +103,14 @@ services:
       - n8n_storage:/home/node/.n8n
       - ./n8n/backup:/backup
       - ./shared:/data/shared
-    depends_on:
-      n8n-import:
-        condition: service_completed_successfully
+    environment:
+      - DB_TYPE=sqlite
+      - N8N_SECURE_COOKIE=false
+    networks:
+      - localai_default
 
   qdrant:
     image: qdrant/qdrant
-    container_name: qdrant
     restart: unless-stopped
     expose:
       - 6333/tcp
@@ -133,7 +134,6 @@ services:
     restart: always
 
   caddy:
-    container_name: caddy
     image: docker.io/library/caddy:2-alpine
     restart: unless-stopped
     ports:
@@ -292,7 +292,6 @@ services:
 
   # postgres service removed - using supabase-db instead
   redis:
-    container_name: redis
     image: docker.io/valkey/valkey:8-alpine
     command: valkey-server --save 30 1 --loglevel warning
     restart: unless-stopped
@@ -318,7 +317,6 @@ services:
       retries: 10
 
   searxng:
-    container_name: searxng
     image: docker.io/searxng/searxng:latest
     restart: unless-stopped
     expose:
